[package]
name = "tobii-stream-engine"
version = "0.1.0"
authors = ["Callum Maybon"]
repository = "https://github.com/cmaybon/tobii-stream-engine"
license = "MIT OR Apache-2.0"
description = ""
edition = "2021"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT"
]


[dependencies]
tobii-stream-engine-sys = { path = "tobii-stream-engine-sys", version = "0.1.0"}
